--- a/T2/Alura.Loja/Alura.Loja.Testes.ConsoleApp/Alura.Loja.Testes.ConsoleApp.csproj
+++ b/T2/Alura.Loja/Alura.Loja.Testes.ConsoleApp/Alura.Loja.Testes.ConsoleApp.csproj
@@ -169,6 +169,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Compra.cs" />
     <Compile Include="IProdutoDAO.cs" />
     <Compile Include="LojaContext.cs" />
     <Compile Include="Migrations\20180726110908_Inicial.cs" />
@@ -178,6 +179,10 @@
     <Compile Include="Migrations\20180726111321_Unidade.cs" />
     <Compile Include="Migrations\20180726111321_Unidade.designer.cs">
       <DependentUpon>20180726111321_Unidade.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\20180726120239_Compra.cs" />
+    <Compile Include="Migrations\20180726120239_Compra.designer.cs">
+      <DependentUpon>20180726120239_Compra.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\LojaContextModelSnapshot.cs" />
     <Compile Include="Produto.cs" />
