--- a/T2/Alura.Loja/Alura.Loja.Testes.ConsoleApp/Alura.Loja.Testes.ConsoleApp.csproj
+++ b/T2/Alura.Loja/Alura.Loja.Testes.ConsoleApp/Alura.Loja.Testes.ConsoleApp.csproj
@@ -169,7 +169,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Cliente.cs" />
     <Compile Include="Compra.cs" />
+    <Compile Include="Endereco.cs" />
     <Compile Include="IProdutoDAO.cs" />
     <Compile Include="LojaContext.cs" />
     <Compile Include="Migrations\20180726110908_Inicial.cs" />
@@ -187,6 +189,10 @@
     <Compile Include="Migrations\20180726132138_Promocao.cs" />
     <Compile Include="Migrations\20180726132138_Promocao.designer.cs">
       <DependentUpon>20180726132138_Promocao.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\20180726144403_Cliente.cs" />
+    <Compile Include="Migrations\20180726144403_Cliente.designer.cs">
+      <DependentUpon>20180726144403_Cliente.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\LojaContextModelSnapshot.cs" />
     <Compile Include="Produto.cs" />
