ASP.NET - Projeto Novo com connection string benner

--- a/T1/Curso ASP.NET/CaelumEstoque/CaelumEstoque/Web.config
+++ b/T1/Curso ASP.NET/CaelumEstoque/CaelumEstoque/Web.config
@@ -21,7 +21,7 @@
 
   <connectionStrings>
     <add name="EstoqueContext"
-         connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=C:\USERS\ALEX\DOCUMENTS\PROJETOS\T1\CURSO ASP.NET\CAELUMESTOQUE\CAELUMESTOQUE\APP_DATA\CAELUMESTOQUE.DAO.ESTOQUECONTEXT.MDF;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+         connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\m003\Documents\Projetos\T1\Curso ASP.NET\CaelumEstoque\CaelumEstoque\App_Data\DBEstoque.mdf;Integrated Security=True"
          providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <entityFramework>
