ASP.NET MVC - Trabalhando com bootstrap

--- a/T1/Curso ASP.NET/CaelumEstoque/CaelumEstoque/Web.config
+++ b/T1/Curso ASP.NET/CaelumEstoque/CaelumEstoque/Web.config
@@ -20,16 +20,22 @@
   </system.web>
 
   <connectionStrings>
-    <add name="EstoqueContext"
-         connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\m003\Documents\Projetos\T1\Curso ASP.NET\CaelumEstoque\CaelumEstoque\App_Data\DBEstoque.mdf;Integrated Security=True"
-         providerName="System.Data.SqlClient"/>
+    <add name="EstoqueContext" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\m003\Documents\Projetos\T1\Curso ASP.NET\CaelumEstoque\CaelumEstoque\App_Data\DBEstoque.mdf;Integrated Security=True" 
+         providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
     <contexts>
-      <context disableDatabaseInitialization="true" type="CaelumEstoque.DAO.EstoqueContext, CaelumEstoque"/>
+      <context disableDatabaseInitialization="true" type="CaelumEstoque.DAO.EstoqueContext, CaelumEstoque" />
     </contexts>
   </entityFramework>
-</configuration>
+<system.webServer>
+    <handlers>
+      <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
+      <remove name="OPTIONSVerbHandler" />
+      <remove name="TRACEVerbHandler" />
+      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
+    </handlers>
+  </system.webServer></configuration>
