--- a/T2/Curso Design Patterns C# I/DesignPatterns01/DesignPatterns01/DesignPatterns01.csproj
+++ b/T2/Curso Design Patterns C# I/DesignPatterns01/DesignPatterns01/DesignPatterns01.csproj
@@ -43,19 +43,31 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Arrojado.cs" />
+    <Compile Include="CalculadorDeDescontos.cs" />
     <Compile Include="CalculadorDeImpostos.cs" />
     <Compile Include="Conservador.cs" />
     <Compile Include="Conta.cs" />
+    <Compile Include="Desconto.cs" />
+    <Compile Include="DescontoPorCincoItens.cs" />
+    <Compile Include="DescontoPorMaisDeQuinhentosReais.cs" />
+    <Compile Include="DescontoPorVendaCasada.cs" />
     <Compile Include="ICCC.cs" />
     <Compile Include="ICMS.cs" />
     <Compile Include="Imposto.cs" />
     <Compile Include="Investimento.cs" />
     <Compile Include="ISS.cs" />
+    <Compile Include="Item.cs" />
     <Compile Include="Moderado.cs" />
     <Compile Include="Orcamento.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RealizadorDeInvestimentos.cs" />
+    <Compile Include="Requisicao.cs" />
+    <Compile Include="Resposta.cs" />
+    <Compile Include="RespostaEmCsv.cs" />
+    <Compile Include="RespostaEmPorcento.cs" />
+    <Compile Include="RespostaEmXml.cs" />
+    <Compile Include="SemDesconto.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
