Design Patterns C#1 - State

--- a/T2/Curso Design Patterns C# I/DesignPatterns01/DesignPatterns01/DesignPatterns01.csproj
+++ b/T2/Curso Design Patterns C# I/DesignPatterns01/DesignPatterns01/DesignPatterns01.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Aprovado.cs" />
     <Compile Include="Arrojado.cs" />
     <Compile Include="CalculadorDeDescontos.cs" />
     <Compile Include="CalculadorDeImpostos.cs" />
@@ -51,10 +52,13 @@
     <Compile Include="DescontoPorCincoItens.cs" />
     <Compile Include="DescontoPorMaisDeQuinhentosReais.cs" />
     <Compile Include="DescontoPorVendaCasada.cs" />
+    <Compile Include="EmAprovacao.cs" />
+    <Compile Include="EstadoDeUmOrcamento.cs" />
     <Compile Include="Filtro.cs" />
     <Compile Include="FiltroMaiorQue500MilReais.cs" />
     <Compile Include="FiltroMenorQue100Reais.cs" />
     <Compile Include="FiltroMesmoMes.cs" />
+    <Compile Include="Finalizado.cs" />
     <Compile Include="ICCC.cs" />
     <Compile Include="ICMS.cs" />
     <Compile Include="ICPP.cs" />
@@ -73,6 +77,7 @@
     <Compile Include="Relatorio.cs" />
     <Compile Include="RelatorioComplexo.cs" />
     <Compile Include="RelatorioSimples.cs" />
+    <Compile Include="Reprovado.cs" />
     <Compile Include="Requisicao.cs" />
     <Compile Include="Resposta.cs" />
     <Compile Include="RespostaEmCsv.cs" />
