--- a/T2/Curso Design Patterns C# I/DesignPatterns01/DesignPatterns01/DesignPatterns01.csproj
+++ b/T2/Curso Design Patterns C# I/DesignPatterns01/DesignPatterns01/DesignPatterns01.csproj
@@ -53,6 +53,7 @@
     <Compile Include="DescontoPorMaisDeQuinhentosReais.cs" />
     <Compile Include="DescontoPorVendaCasada.cs" />
     <Compile Include="EmAprovacao.cs" />
+    <Compile Include="EstadoDaConta.cs" />
     <Compile Include="EstadoDeUmOrcamento.cs" />
     <Compile Include="Filtro.cs" />
     <Compile Include="FiltroMaiorQue500MilReais.cs" />
@@ -70,7 +71,9 @@
     <Compile Include="ISS.cs" />
     <Compile Include="Item.cs" />
     <Compile Include="Moderado.cs" />
+    <Compile Include="Negativo.cs" />
     <Compile Include="Orcamento.cs" />
+    <Compile Include="Positivo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RealizadorDeInvestimentos.cs" />
