--- a/T2/Curso Design Patterns C# I/DesignPatterns01/DesignPatterns01/DesignPatterns01.csproj
+++ b/T2/Curso Design Patterns C# I/DesignPatterns01/DesignPatterns01/DesignPatterns01.csproj
@@ -70,8 +70,11 @@
     <Compile Include="Investimento.cs" />
     <Compile Include="ISS.cs" />
     <Compile Include="Item.cs" />
+    <Compile Include="ItemDaNota.cs" />
     <Compile Include="Moderado.cs" />
     <Compile Include="Negativo.cs" />
+    <Compile Include="NotaFiscal.cs" />
+    <Compile Include="NotaFiscalBuilder.cs" />
     <Compile Include="Orcamento.cs" />
     <Compile Include="Positivo.cs" />
     <Compile Include="Program.cs" />
