--- a/T2/Curso Design Patterns C# 2/DesignPatterns2/DesignPatterns2/DesignPatterns2.csproj
+++ b/T2/Curso Design Patterns C# 2/DesignPatterns2/DesignPatterns2/DesignPatterns2.csproj
@@ -81,11 +81,16 @@
     <Compile Include="Cap7\Status.cs" />
     <Compile Include="Cap8\Cliente.cs" />
     <Compile Include="Cap8\GeradorXml.cs" />
+    <Compile Include="Cap9\EmpresaFacade.cs" />
+    <Compile Include="Cap9\EmpresaFacadeSingleton.cs" />
+    <Compile Include="Cap9\Servico.cs" />
+    <Compile Include="Cap9\ServicoSingleton.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
