--- a/T2/SOLID C#/MaoNaMassaSRP/MaoNaMassaSRP/MaoNaMassaSRP.csproj
+++ b/T2/SOLID C#/MaoNaMassaSRP/MaoNaMassaSRP/MaoNaMassaSRP.csproj
@@ -44,9 +44,15 @@
   <ItemGroup>
     <Compile Include="CalculadoraDeSalario.cs" />
     <Compile Include="Cargo.cs" />
+    <Compile Include="Dba.cs" />
+    <Compile Include="Desenvolvedor.cs" />
+    <Compile Include="dezOuVintePorcento.cs" />
     <Compile Include="Funcionario.cs" />
+    <Compile Include="IRegraDeCalculo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="quinzeOuVinteCincoPorcento.cs" />
+    <Compile Include="Tester.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
