TDD - Praticando Teste-Driven Development

--- a/T2/TDD/Caelum.Leilao/Caelum.Leilao.Test/Caelum.Leilao.Test.csproj
+++ b/T2/TDD/Caelum.Leilao/Caelum.Leilao.Test/Caelum.Leilao.Test.csproj
@@ -50,6 +50,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AvaliadorTest.cs" />
+    <Compile Include="FiltroDeLancesTest.cs" />
+    <Compile Include="LeilaoTest.cs" />
+    <Compile Include="MatematicaMalucaTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
