--- a/T2/TDD/Caelum.Leilao/Caelum.Leilao/Caelum.Leilao.csproj
+++ b/T2/TDD/Caelum.Leilao/Caelum.Leilao/Caelum.Leilao.csproj
@@ -47,6 +47,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Avaliador.cs" />
+    <Compile Include="FiltroDeLances.cs" />
+    <Compile Include="MatematicaMaluca.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
