TDD - Test Data Builder e Exceptions.

--- a/T2/TDD/Caelum.Leilao/Caelum.Leilao/Caelum.Leilao.csproj
+++ b/T2/TDD/Caelum.Leilao/Caelum.Leilao/Caelum.Leilao.csproj
@@ -46,7 +46,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AnoBissexto.cs" />
     <Compile Include="Avaliador.cs" />
+    <Compile Include="CriadorDeLeilao.cs" />
     <Compile Include="FiltroDeLances.cs" />
     <Compile Include="MatematicaMaluca.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
