--- a/T2/TDD/Caelum.Leilao/Caelum.Leilao.Test/Caelum.Leilao.Test.csproj
+++ b/T2/TDD/Caelum.Leilao/Caelum.Leilao.Test/Caelum.Leilao.Test.csproj
@@ -49,8 +49,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AnoBissextoTest.cs" />
     <Compile Include="AvaliadorTest.cs" />
     <Compile Include="FiltroDeLancesTest.cs" />
+    <Compile Include="LanceTest.cs" />
     <Compile Include="LeilaoTest.cs" />
     <Compile Include="MatematicaMalucaTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
