--- a/T2/Reflection C#/ByteBank.Portal/ByteBank.Portal/ByteBank.Portal.csproj
+++ b/T2/Reflection C#/ByteBank.Portal/ByteBank.Portal/ByteBank.Portal.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{352AC902-6469-4430-8066-EFD8039A0E26}</ProjectGuid>
+    <ProjectGuid>{59802278-1430-4639-BF96-41A659363F0F}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <RootNamespace>ByteBank.Portal</RootNamespace>
     <AssemblyName>ByteBank.Portal</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
@@ -21,6 +21,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <LangVersion>7</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -34,6 +35,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -67,13 +69,14 @@
     <EmbeddedResource Include="View\Home\Index.html" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="View\Cambio\Calculo.html" />
-  </ItemGroup>
-  <ItemGroup>
     <ProjectReference Include="..\ByteBank.Service\ByteBank.Service.csproj">
-      <Project>{34e1a873-2a89-4b19-85a8-a685077922ae}</Project>
+      <Project>{9eebac18-7aed-45a5-b7de-e081f372ba82}</Project>
       <Name>ByteBank.Service</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="View\Cambio\Calculo.html" />
+  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
